--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <div id="div5"> Your guesses so far : </div>
     <br />
 
-    <script>
+    <script src = assets/javascript/game.js></script>
+    <!-- <script>
 
     var guess = "abcdefghijklmnopqurstuvwxyz";
     
@@ -72,6 +73,6 @@
 }
 
 
-    </script>
+    </script> -->
 </body>
 </html>
